--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,48 +1,29 @@
-name: Build MAUI macOS App
-
-on:
-  workflow_dispatch:
-
-jobs:
-  build-macos:
-    runs-on: macos-latest
-
+  build-mac:
+    runs-on: macos-11
+    name: MacCatalyst Build
     steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: 🛠 Setup .NET 8 SDK
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+          include-prerelease: true
 
-    - name: 📦 Install MAUI workload
-      run: |
-        dotnet workload install maui --skip-sign-check
+      - name: Install MAUI Workloads
+        run: |
+          dotnet workload install maccatalyst --ignore-failed-sources
+          dotnet workload install maui --ignore-failed-sources
 
-    - name: 🔄 Restore dependencies
-      run: dotnet restore TestingApp/TestingApp.csproj
+      - name: Restore Dependencies
+        run: dotnet restore src/MauiBeach/MauiBeach.csproj
 
-    - name: 🚀 Publish .app for Mac Catalyst
-      run: dotnet publish TestingApp/TestingApp.csproj -f:net8.0-maccatalyst -c:Release
+      - name: Build MAUI MacCatalyst
+        run: dotnet build src/MauiBeach/MauiBeach.csproj -c Release -f net6.0-maccatalyst --no-restore
 
-    - name: 📂 List all publish output folders (for debugging)
-      run: find TestingApp/bin -type d
-
-    - name: 📁 Zip the .app
-      run: |
-        APP_PATH=$(find TestingApp/bin/Release -type d -name "*.app" | head -n 1)
-        if [ -d "$APP_PATH" ]; then
-          cd "$(dirname "$APP_PATH")"
-          zip -r TestingApp-macOS.zip "$(basename "$APP_PATH")"
-        else
-          echo "❌ .app not found!"
-          exit 1
-        fi
-
-    - name: ☁️ Upload zipped .app
-      uses: actions/upload-artifact@v4
-      with:
-        name: TestingApp-macOS
-        path: |
-          **/TestingApp-macOS.zip
+      - name: Upload MacCatalyst Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: macos-ci-build
+          path: src/MauiBeach/bin/Release/net6.0-maccatalyst/**/*.app/
